package org.csc133.a3;

public interface IStrategy {
    public String getStrategyType();
    public void apply();
}
