@startuml

title __A3PRJ's Class Diagram__\n

  namespace org.csc133.a3 {
    class org.csc133.a3.AboutCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.AccelerateCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.AppMain {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.AttackStrategy {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.BGSound {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.Bird {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.BirdCollisionCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.BlimpCollisionCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.BrakeCommand {
    }
  }
  

  namespace org.csc133.a3 {
    abstract class org.csc133.a3.Commands {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.DamageLevelComponent {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.DefenseStrategy {
    }
  }
  

  namespace org.csc133.a3 {
    abstract class org.csc133.a3.DigitImageComponent {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.ExitCommand {
    }
  }
  

  namespace org.csc133.a3 {
    abstract class org.csc133.a3.Fixed {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.FuelLevelComponent {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.Game {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.GameClockComponent {
    }
  }
  

  namespace org.csc133.a3 {
    abstract class org.csc133.a3.GameObject {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.GameObjectCollection {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.GameWorld {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.GlassCockpit {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.HeadingComponent {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.Helicopter {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.Helipad {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.HelpCommand {
    }
  }
  

  namespace org.csc133.a3 {
    interface org.csc133.a3.ICollection {
    }
  }
  

  namespace org.csc133.a3 {
    interface org.csc133.a3.ICollider {
    }
  }
  

  namespace org.csc133.a3 {
    interface org.csc133.a3.IDrawable {
    }
  }
  

  namespace org.csc133.a3 {
    interface org.csc133.a3.IGameClock {
    }
  }
  

  namespace org.csc133.a3 {
    interface org.csc133.a3.IObservable {
    }
  }
  

  namespace org.csc133.a3 {
    interface org.csc133.a3.IObserver {
    }
  }
  

  namespace org.csc133.a3 {
    interface org.csc133.a3.ISteerable {
    }
  }
  

  namespace org.csc133.a3 {
    interface org.csc133.a3.IStrategy {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.LeftTurnCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.MapView {
    }
  }
  

  namespace org.csc133.a3 {
    abstract class org.csc133.a3.Movable {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.NonPlayerHelicopter {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.NphCollisionCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.PlayPauseCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.PlayerHelicopter {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.RaceStrategy {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.RefuelingBlimp {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.RightTurnCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.SingleDigitComponent {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.SkyScraper {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.SkyscraperCollisionCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.Sound {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.SoundCommand {
    }
  }
  

  namespace org.csc133.a3 {
    class org.csc133.a3.SwitchStrategyCommand {
    }
  }
  

  org.csc133.a3.AboutCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.AboutCommand o-- org.csc133.a3.Game : game
  org.csc133.a3.AboutCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.AccelerateCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.AccelerateCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.AttackStrategy .up.|> org.csc133.a3.IStrategy
  org.csc133.a3.AttackStrategy o-- org.csc133.a3.NonPlayerHelicopter : nphHelicopter
  org.csc133.a3.AttackStrategy o-- org.csc133.a3.Helicopter : targetHelicopter
  org.csc133.a3.BGSound .up.|> java.lang.Runnable
  org.csc133.a3.Bird -up-|> org.csc133.a3.Movable
  org.csc133.a3.BirdCollisionCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.BirdCollisionCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.BlimpCollisionCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.BlimpCollisionCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.BrakeCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.BrakeCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.Commands -up-|> com.codename1.ui.Command
  org.csc133.a3.DamageLevelComponent -up-|> org.csc133.a3.DigitImageComponent
  org.csc133.a3.DefenseStrategy .up.|> org.csc133.a3.IStrategy
  org.csc133.a3.DefenseStrategy o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.DefenseStrategy o-- org.csc133.a3.NonPlayerHelicopter : nphHelicopter
  org.csc133.a3.DigitImageComponent -up-|> com.codename1.ui.Component
  org.csc133.a3.ExitCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.ExitCommand o-- org.csc133.a3.Game : game
  org.csc133.a3.ExitCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.Fixed -up-|> org.csc133.a3.GameObject
  org.csc133.a3.FuelLevelComponent -up-|> org.csc133.a3.DigitImageComponent
  org.csc133.a3.Game .up.|> java.lang.Runnable
  org.csc133.a3.Game -up-|> com.codename1.ui.Form
  org.csc133.a3.Game o-- org.csc133.a3.GlassCockpit : glassCockpit
  org.csc133.a3.Game o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.Game o-- org.csc133.a3.MapView : mapView
  org.csc133.a3.GameClockComponent -up-|> org.csc133.a3.DigitImageComponent
  org.csc133.a3.GameObject .up.|> org.csc133.a3.ICollider
  org.csc133.a3.GameObject .up.|> org.csc133.a3.IDrawable
  org.csc133.a3.GameObjectCollection .up.|> org.csc133.a3.ICollection
  org.csc133.a3.GameWorld .up.|> org.csc133.a3.IObservable
  org.csc133.a3.GameWorld o-- org.csc133.a3.BGSound : backgroundSound
  org.csc133.a3.GameWorld o-- org.csc133.a3.Sound : birdCrash
  org.csc133.a3.GameWorld o-- org.csc133.a3.Sound : blimpCrash
  org.csc133.a3.GameWorld o-- org.csc133.a3.GameObjectCollection : gameObjects
  org.csc133.a3.GameWorld o-- org.csc133.a3.Sound : heliCheckpoint
  org.csc133.a3.GameWorld o-- org.csc133.a3.Sound : helicopterCrash
  org.csc133.a3.GlassCockpit .up.|> org.csc133.a3.IGameClock
  org.csc133.a3.GlassCockpit .up.|> org.csc133.a3.IObserver
  org.csc133.a3.GlassCockpit -up-|> com.codename1.ui.Container
  org.csc133.a3.GlassCockpit o-- org.csc133.a3.DamageLevelComponent : damageLevelComp
  org.csc133.a3.GlassCockpit o-- org.csc133.a3.FuelLevelComponent : fuelLevelComp
  org.csc133.a3.GlassCockpit o-- org.csc133.a3.GameClockComponent : gameTimeComp
  org.csc133.a3.GlassCockpit o-- org.csc133.a3.HeadingComponent : headingComp
  org.csc133.a3.GlassCockpit o-- org.csc133.a3.SingleDigitComponent : lastComp
  org.csc133.a3.GlassCockpit o-- org.csc133.a3.SingleDigitComponent : livesComp
  org.csc133.a3.HeadingComponent -up-|> org.csc133.a3.DigitImageComponent
  org.csc133.a3.Helicopter .up.|> org.csc133.a3.ISteerable
  org.csc133.a3.Helicopter -up-|> org.csc133.a3.Movable
  org.csc133.a3.Helipad -up-|> org.csc133.a3.Fixed
  org.csc133.a3.HelpCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.HelpCommand o-- org.csc133.a3.Game : game
  org.csc133.a3.HelpCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.LeftTurnCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.LeftTurnCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.MapView .up.|> org.csc133.a3.IObserver
  org.csc133.a3.MapView -up-|> com.codename1.ui.Container
  org.csc133.a3.MapView o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.Movable -up-|> org.csc133.a3.GameObject
  org.csc133.a3.NonPlayerHelicopter -up-|> org.csc133.a3.Helicopter
  org.csc133.a3.NonPlayerHelicopter o-- org.csc133.a3.IStrategy : curStrategy
  org.csc133.a3.NphCollisionCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.NphCollisionCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.PlayPauseCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.PlayPauseCommand o-- org.csc133.a3.Game : game
  org.csc133.a3.RaceStrategy .up.|> org.csc133.a3.IStrategy
  org.csc133.a3.RaceStrategy o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.RaceStrategy o-- org.csc133.a3.NonPlayerHelicopter : nphHelicopter
  org.csc133.a3.RefuelingBlimp -up-|> org.csc133.a3.Fixed
  org.csc133.a3.RightTurnCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.RightTurnCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.SingleDigitComponent -up-|> org.csc133.a3.DigitImageComponent
  org.csc133.a3.SkyScraper -up-|> org.csc133.a3.Fixed
  org.csc133.a3.SkyscraperCollisionCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.SkyscraperCollisionCommand o-- org.csc133.a3.Game : game
  org.csc133.a3.SkyscraperCollisionCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.SoundCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.SoundCommand o-- org.csc133.a3.Game : game
  org.csc133.a3.SoundCommand o-- org.csc133.a3.GameWorld : gw
  org.csc133.a3.SwitchStrategyCommand -up-|> org.csc133.a3.Commands
  org.csc133.a3.SwitchStrategyCommand o-- org.csc133.a3.Game : game
  org.csc133.a3.SwitchStrategyCommand o-- org.csc133.a3.GameWorld : gw


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
